# st-projectr

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  projects_fixture.json  pyproject.toml
app/: admin.py  models.py  urls.py
app/management/commands/: seed.py
app/migrations/: 0001_initial.py  0002_alter_city_options_project_idx.py  0003_project_calculated_rate.py  0004_alter_city_unique_together.py
app/models/: __init__.py  city.py  project.py
app/templates/: base.html  index.html
app/templates/account/: login.html  profile.html
app/templates/projects/: detail.html  edit.html  list.html
app/templatetags/: custom_filters.py
app/tests/: admin_tests.py
app/tests/models/: project_tests.py
app/tests/templatetags/: custom_filters_tests.py
app/views/: views.py
app/views/projects/: views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
